; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_refs_delete_refs.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_refs_delete_refs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_store = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }
%struct.string_list = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @refs_delete_refs(%struct.ref_store* %0, i8* %1, %struct.string_list* %2, i32 %3) #0 {
  %5 = alloca %struct.ref_store*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.string_list*, align 8
  %8 = alloca i32, align 4
  store %struct.ref_store* %0, %struct.ref_store** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.string_list* %2, %struct.string_list** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.ref_store*, %struct.ref_store** %5, align 8
  %10 = getelementptr inbounds %struct.ref_store, %struct.ref_store* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = bitcast {}** %12 to i32 (%struct.ref_store*, i8*, %struct.string_list*, i32)**
  %14 = load i32 (%struct.ref_store*, i8*, %struct.string_list*, i32)*, i32 (%struct.ref_store*, i8*, %struct.string_list*, i32)** %13, align 8
  %15 = load %struct.ref_store*, %struct.ref_store** %5, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load %struct.string_list*, %struct.string_list** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = call i32 %14(%struct.ref_store* %15, i8* %16, %struct.string_list* %17, i32 %18)
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
